# rl-bug-fix-full-send

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION-PLAN.md  Makefile  README.md  SPEC.md  prompt.md  pyproject.toml  ruff.toml
.github/workflows/: quality-scan.yml  ralph-loop.yml  rl-engine.yml
docs/: full-review-and-fullsend-contribution.md  ralph-loop-overview.html  rl-engine-overview.html  security-posture-examples.md
engine/: __init__.py  __main__.py  config.py  golden_principles.py  loop.py  quality_scanner.py  secrets.py
progress/: run-log.md  status.json
scripts/: gen-progress.py  is-ralph-complete.py  meta-loop.sh  meta_loop_agent.py  run-ralph-loop.sh  setup-fork.sh
tests/: test_action_map.py  test_ci_monitor.py  test_ci_pr_comment.py  test_ci_remediate.py  test_cli.py  test_comparison.py  test_config.py  test_decision_tree.py  test_detail_panels.py  test_discovery.py  test_e2e.py  test_extraction.py  test_github_integration.py  test_golden_principles.py  test_implement.py  test_jira_integration.py  test_llm.py  test_loop.py  test_narration.py  test_narrative_summary.py  test_observability.py  test_observer_attestation.py  test_observer_cli.py  test_observer_policy.py  test_observer_reconstructor.py  test_observer_signer.py  test_phases.py  test_prompt_injection.py  test_publisher.py  test_quality_scanner.py  test_report_assembly.py  test_report_generator.py  test_report_phase.py  test_review.py  test_scene_builder.py  test_scene_renderer.py  test_secrets.py  test_security_audit.py  test_slack_integration.py  test_stack_handoff.py  (+8 more)
(+125 files in other folders)
